Update exp